--- a/package.json
+++ b/package.json
@@ -3,11 +3,10 @@
   "version": "1.0.0",
   "main": "track-api.js",
   "scripts": {
-    "start": "node track-api.js",
-    "postinstall": "npx puppeteer install"
+    "start": "node track-api.js"
   },
   "dependencies": {
     "express": "^4.18.2",
-    "puppeteer": "^19.11.1"
+    "puppeteer": "^21.3.8"
   }
 }
